tests/baselines/reference/instantiatedBaseTypeConstraints.errors.txt
tests/cases/compiler/instantiatedBaseTypeConstraints.ts(1,15): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
tests/cases/compiler/instantiatedBaseTypeConstraints.ts(1,25): error TS2315: Type 'Foo' is not generic.


==== tests/cases/compiler/instantiatedBaseTypeConstraints.ts (2 errors) ====
    interface Foo<T extends Foo<T, C>, C> {
                  ~~~~~~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                            ~~~~~~~~~
!!! error TS2315: Type 'Foo' is not generic.
      foo(bar: C): void;
    }
    
    class Bar implements Foo<Bar, string> {
      foo(bar: string): void {
      }
    }
    
     
    